Heroku deployment stuff

--- a/BusPay2000/templates/actual_schedule.html
+++ b/BusPay2000/templates/actual_schedule.html
@@ -1,1 +1,38 @@
-<p></p>
+<div class="schedule">
+
+    <p><strong>Маршрут N24 &quot;Вокзал &ndash; Каменушка&quot;</strong></p>
+    <p>Вокзал&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;07:157 08:35 - по ул. Ленина</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;11.35 / 12:45
+        / 16:10 / 18:10 - через &laquo;Рынок&raquo;</p>
+    <p>Каменушка&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 07:30 / 08:50 / 11:50 / 13:00 / 16:25 / 18:25</p>
+    <p><strong>Маршрут №8 &quot;Вокзал - Первомайская&quot;</strong></p>
+    <p>Вокзал&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 06:35 / 08:00 / 09 05 - по ул. Уссурийской</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        10:50/12:05/13:15/14:10/17:15</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 18:40 -
+        через &laquo;Рынок&raquo;</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 20:00 - по
+        ул. Уссурийской</p>
+    <p>Первомайская &nbsp; &nbsp; &nbsp;06:55 / 08:15 09:20 / 11:10 / 12:25 7 13:35</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 14:30 /
+        17:35 / 19:00 / 20:20 - по ул. Ленина</p>
+    <p><strong>Маршрут N2103 &quot;Дальнереченск &mdash; Речное&quot; / Пн - Пт</strong></p>
+    <p>Вокзал&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;07:15/10:20 / 11:45/13:20/15-20 / 17:30
+    </p>
+    <p>Речное&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;07:45 / 10:50 / 12:15 / 14:05 / 15:50 /
+        18:00</p>
+    <p><strong>Маршрут №104 &quot;Вокзал &ndash; Рождественка&quot;</strong></p>
+    <p>Вокзал&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;06:15/08:15 / 11:30 / 13:30 / 17:15</p>
+    <p>Рождественка&nbsp; &nbsp; &nbsp; &nbsp;07.05 / 09:10 / 12:30 / 14:30 / 18:15</p>
+    <p><strong>Маршрут N№105 МП &quot;Вокзал - Соловьевка&quot;</strong></p>
+    <p>Вокзал&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 06:30 /07:45 / 09:20/11:40 / 13:20 / 15:50</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 17:10 /
+        18:35 / 19:45 (до Веденки, Пн - сб)</p>
+    <p>Соловьевка&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;07:05/08 20/10:00 / 12:25 / 14:05/16:35</p>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 17:55 /
+        19:05</p>
+    <p>Веденка &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;20:15</p>
+    <p><br></p>
+
+
+</div>
