--- a/BusPay2000/templates/elements/layout.html
+++ b/BusPay2000/templates/elements/layout.html
@@ -12,12 +12,13 @@
     <!-- my css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <!-- JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+
 
     {% if title %}
     <title>{{ title }}</title>
@@ -34,13 +35,10 @@
     {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages%}
     {% for category, msg in messages %}
-    <div class="container">
-        <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
+        <div class="alert alert-{{ category }}g alert-dismissible fade show" role="alert">
             {{ msg }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
-    </div>
     {% endfor %}
     {% endif %}
     {% endwith %}
@@ -55,9 +53,7 @@
             {% block content %}
             {% endblock content %}
     </div>
-    <!-- <div class="container" style="margin-top: 45px;">
 
-    </div> -->
     <!-- JS -->
     <script>
         $('.btn-x').click(function () {
