--- a/BusPay2000/templates/login.html
+++ b/BusPay2000/templates/login.html
@@ -34,13 +34,13 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-check">
+            <!-- <div class="form-check">
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
-            </div>
+            </div> -->
         </fieldset>
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info")}}
+            {{ form.submit(class="btn btn-outline-info reg-login-btn")}}
         </div>
     </form>
 </div>
