--- a/BusPay2000/templates/registration.html
+++ b/BusPay2000/templates/registration.html
@@ -47,13 +47,13 @@
                 {{ form.confirm_password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 {{ form.usr_type.label(class="form-control-label")}}
                 {{form.usr_type(class="form-check-label")}}
-            </div>
+            </div> -->
         </fieldset>
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info")}}
+            {{ form.submit(class="btn btn-outline-info reg-login-btn")}}
         </div>
     </form>
 </div>
