--- a/BusPay2000/static/main.css
+++ b/BusPay2000/static/main.css
@@ -9,29 +9,35 @@
 }
 
 body {
-    background-color: #eee
+    /* background-color: #eee */
+    background-color: white;
 }
 
 .btn-x {
     position: absolute;
     top: 10px;
+    left: -10px;
     /* left: 45px; */
     /* height: 37px; */
     /* width: 37px; */
     text-align: center;
-    background: #1b1b1b;
+    /* background: #C4C4C4; */
     border-radius: 3px;
     cursor: pointer;
-    transition: left 0.4s ease
+    transition: left 0.4s ease;
+    z-index: 2;
 }
 
 .btn.click {
-    left: 260px
+    /* left: 260px; */
+    left: 181px;
+    top: 10px;
 }
 
 .btn span {
-    color: white;
-    font-size: 15px;
+    color: black;
+    font-size: 60px;
+    /* 15px */
     line-height: 36px
 }
 
@@ -43,8 +49,8 @@ body {
     position: fixed;
     width: 250px;
     height: 100%;
-    left: -250px;
-    background: #1b1b1b;
+    left: -190px;
+    background: #C4C4C4;
     transition: left 0.4s ease
 }
 
@@ -53,17 +59,17 @@ body {
 }
 
 .sidebar .text {
-    color: white;
+    color: black;
     font-size: 19px;
     font-weight: 600;
     line-height: 65px;
     text-align: center;
-    background: #1e1e1e;
+    background: #C4C4C4;
     letter-spacing: 1px
 }
 
 nav ul {
-    background: #1b1b1b;
+    background: #C4C4C4;
     height: 100%;
     width: 100%;
     list-style: none;
@@ -71,19 +77,21 @@ nav ul {
 }
 
 nav ul li {
-    line-height: 50px;
-    border-top: 1px solid rgba(255, 255, 255, 0.1)
+    line-height: 65px;
+    /* border-top: 1px solid rgba(255, 255, 255, 0.1) */
+    border-top: 1px solid black;;
 }
 
 nav ul li:last-child {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.05)
+    /* border-bottom: 1px solid rgba(255, 255, 255, 0.05) */
+    border-bottom: 1px solid black;
 }
 
 nav ul li a {
     position: relative;
-    color: white;
+    color: black;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 1.2em;
     padding-left: 14px;
     font-weight: 500;
     display: block;
@@ -92,13 +100,13 @@ nav ul li a {
 }
 
 nav ul li.active a {
-    color: #acacac;
-    background: #1e1e1e;
-    border-left-color: #acacac
+    /* color: #acacac; */
+    background: #C4C4C4;
+    /* border-left-color: #acacac */
 }
 
 nav ul li a:hover {
-    background: #1e1e1e
+    background: #C4C4C4
 }
 
 .feat-show {
@@ -126,12 +134,13 @@ nav ul ul li {
 
 nav ul ul li a {
     font-size: 12px;
-    color: #e6e6e6
+    color: black;
 }
 
 nav ul li.active ul li a {
-    color: #e6e6e6;
-    background: #1b1b1b;
+    /* color: #e6e6e6; */
+    color: black;
+    background: #C4C4C4;
     border-left-color: transparent
 }
 
@@ -157,6 +166,7 @@ nav ul li a span.rotate {
     transform: translateY(-50%) rotate(-180deg)
 }
 
+
 .content {
     /* position: absolute;
     top: 50%;
@@ -172,6 +182,13 @@ nav ul li a span.rotate {
     z-index: -1;
     text-align: center
 }
+
+@media screen and (max-width: 600px) {
+    .content {
+        width: 70%;
+}
+}
+
 
 .logo-txt {
     font-style: italic;
@@ -194,6 +211,21 @@ nav ul li a span.rotate {
   width: 100%;
   height: auto;
 }
+
+.menu-icon {
+    display: inline-block;
+    vertical-align: middle;
+    float: right;
+    padding-right: 10px;
+}
+
+
+
+.menu-text {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 @media screen and (min-width: 800px) {
     .qr-code {
         width: 60%;
@@ -231,10 +263,15 @@ th, td {
     margin-right: auto;
 }
 
+.form-roundness{
+    border-radius: 13.3rem;
+    height: 72px;;
+}
+
 .reg-login-btn {
     color: #313333;
     border-color: #313333;
-    width: 50%;
+    width: 100%;
 }
 
 .reg-login-btn:hover {
@@ -273,4 +310,10 @@ th, td {
 
 .form-text {
     font-size: medium;
+}
+
+.logout-bottom{
+    position: absolute;
+    bottom: 0;
+    width: 240px;
 }
