--- a/BusPay2000/templates/login.html
+++ b/BusPay2000/templates/login.html
@@ -8,7 +8,7 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Вход</legend>
             <div class="form-group">
-                {{ form.phone.label(class="form-control-label") }}
+                <!-- {{ form.phone.label(class="form-control-label") }} -->
                 {% if form.phone.errors %}
                 {{ form.phone(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -17,12 +17,12 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.phone(class="form-control form-control-lg", maxlength="11", oninput="this.value = this.value.replace(/[^0-9.]/g,
+                {{ form.phone(class="form-control form-control-lg form-roundness",placeholder="+7999-999-99-99", maxlength="11", oninput="this.value = this.value.replace(/[^0-9.]/g,
                 '').replace(/(\..*)\./g, '$1');") }}
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.password.label(class="form-control-label") }}
+                <!-- {{ form.password.label(class="form-control-label") }} -->
                 {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -31,7 +31,7 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.password(class="form-control form-control-lg") }}
+                {{ form.password(class="form-control form-control-lg form-roundness", placeholder="Введите пароль") }}
                 {% endif %}
             </div>
             <!-- <div class="form-check">
@@ -40,7 +40,7 @@
             </div> -->
         </fieldset>
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info reg-login-btn")}}
+            {{ form.submit(class="btn btn-outline-info reg-login-btn form-roundness")}}
         </div>
     </form>
 </div>
