--- a/BusPay2000/templates/elements/layout.html
+++ b/BusPay2000/templates/elements/layout.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <div class="btn-x btn"> <span class="fas fa-bars"></span> </div>
+    <!-- <div class="btn-x btn"> <span class="fas fa-bars"></span> </div> -->
     {% if not front %}
     {% include "elements/navbar.html" %}
     {% endif %}
