--- a/BusPay2000/templates/schedule.html
+++ b/BusPay2000/templates/schedule.html
@@ -4,6 +4,106 @@
 
 <h2>Расписание</h2>
 
-{% include "actual_schedule.html" %}
+
+<table class="schedule">
+    <thead>
+        <tr>
+            <th colspan="3">Время отправления</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+        <th>ФНМ</td>
+        <th>ЦРБ</td>
+        <th>Дни выполнения</th>
+        </tr>
+        <tr>
+            <td>6-30</td>
+            <td>7-00</td>
+            <td><strong>кр. 6,</strong></td>
+        </tr>
+        <tr>
+            <td>7-30</td>
+            <td>8-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td><strong>Центр</strong></td>
+            <td><strong>ЦРБ</strong></td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>8-30</td>
+            <td>9-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>9-30</td>
+            <td>10-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>10-30</td>
+            <td>11-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>11-30</td>
+            <td>12-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>12-30</td>
+            <td>13-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>13-15</td>
+            <td>обед</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>14-30</td>
+            <td>15-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>15-30</td>
+            <td>16-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>16-30</td>
+            <td>17-00</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>17-30</td>
+            <td>18-00</td>
+            <td><strong>кр. 6,</strong></td>
+        </tr>
+        <tr>
+            <td>18-30</td>
+            <td>19-00</td>
+            <td><strong>кр. 6,</strong></td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+    <tbody>
+</table>
+<!-- {% include "actual_schedule.html" %} -->
 
 {% endblock content %}
