--- a/BusPay2000/static/main.css
+++ b/BusPay2000/static/main.css
@@ -16,7 +16,7 @@ body {
 .btn-x {
     position: absolute;
     top: 10px;
-    left: -10px;
+    left: 179px;
     /* left: 45px; */
     /* height: 37px; */
     /* width: 37px; */
@@ -30,7 +30,7 @@ body {
 
 .btn.click {
     /* left: 260px; */
-    left: 181px;
+    left: 185px;
     top: 10px;
 }
 
@@ -316,4 +316,23 @@ th, td {
     position: absolute;
     bottom: 0;
     width: 240px;
+}
+
+.schedule {
+    width:100%;
+    border:1px solid #000000;
+    border-collapse:collapse;
+    padding:5px;
+    text-align: center;
+}
+.schedule th {
+    border:1px solid #000000;
+    padding:5px;
+    /* background:#F0F0F0; */
+}
+.schedule td {
+    border-right:1px solid #000000;
+    text-align:center;
+    padding:5px;
+    background:#F7F5D2;
 }
