--- a/BusPay2000/templates/history.html
+++ b/BusPay2000/templates/history.html
@@ -1,3 +1,12 @@
 {% extends "elements/layout.html" %}
 
+{% block content %}
+
+{% if current_user.is_authenticated %}
 <h1>History</h1>
+
+{% else %}
+<h3>Войдите в свой аккаунт или зарегистрируйтесь!</h3>
+{% endif %}
+
+{% endblock content %}
