--- a/BusPay2000/templates/travelcard.html
+++ b/BusPay2000/templates/travelcard.html
@@ -1,3 +1,12 @@
 {% extends "elements/layout.html" %}
 
-<h1>Travelcard</h1>sdfsdfsdfsdfsd
+{% block content %}
+
+{% if current_user.is_authenticated %}
+<h1>Travelcard</h1>
+
+{% else %}
+<h3>Войдите в свой аккаунт или зарегистрируйтесь!</h3>
+{% endif %}
+
+{% endblock content %}
