--- a/BusPay2000/templates/account.html
+++ b/BusPay2000/templates/account.html
@@ -8,7 +8,7 @@
 
 {% if current_user.is_authenticated %}
 <h2>%user_name%</h2>
-<p align="center"><a href="#">Изменить профиль</a></p>
+<!-- <p align="center"><a href="#">Изменить профиль</a></p> -->
     <table class="center">
         <tr>
             <th>Мои баллы:</th>
@@ -19,7 +19,7 @@
             <td>0</td>
         </tr>
         <tr>
-            <td><a href="#">Изменить пароль</a></td>
+            <!-- <td><a href="#">Изменить пароль</a></td> -->
         </tr>
     </table>
 {% else %}
