--- a/BusPay2000/templates/elements/layout.html
+++ b/BusPay2000/templates/elements/layout.html
@@ -44,7 +44,7 @@
     {% endwith %}
     <div class="header">
         <div>
-            <img class="logo-x-txt" src="{{ url_for('static', filename='icons/logo.png') }}" alt="">
+            <img class="logo-x-img" src="{{ url_for('static', filename='icons/logo.png') }}" alt="">
             <p>АО "Инзенское Автортранспортное предприятие"</p>
         </div>
     </div>
