--- a/BusPay2000/templates/history.html
+++ b/BusPay2000/templates/history.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-<h1>History</h1>
+<h1>История поездок</h1>
+
+
 
 {% else %}
 <h3>Войдите в свой аккаунт или зарегистрируйтесь!</h3>
