purchase history, travelcards and stuff working

--- a/BusPay2000/templates/buy.html
+++ b/BusPay2000/templates/buy.html
@@ -3,9 +3,7 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-<!-- <h2 class="txt-x">Билет на городской маршрут</h2>
-<p class="txt-x"><strong>25 рублей</strong></p> -->
-
+<h1>Купить билет</h1>
 
 
 <div class="content-section">
