--- a/BusPay2000/templates/elements/navbar.html
+++ b/BusPay2000/templates/elements/navbar.html
@@ -70,7 +70,7 @@
         <li>
             <a href="{{ url_for('history_page') }}">
             <div class="menu-text">
-                История поездок
+                История покупок
             </div>
             <div class="menu-icon">
                 <img src="{{ url_for('static', filename='icons/history.png') }}" alt="">
