--- a/BusPay2000/templates/travelcard.html
+++ b/BusPay2000/templates/travelcard.html
@@ -3,33 +3,23 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-<h1>Проездной</h1>
+<h1>Купить проездной</h1>
 
 <div class="content-section">
     <form class="form-text" method="post" action="">
         {{ form.hidden_tag() }}
-        <fieldset class="form-group" style="margin-bottom: 20px;">
-            <legend class="border-bottom mb-4">Проездной на {{ travelcard_uses[0] }} поездок</legend>
+        <fieldset class="form-group">
             <div class="form-group">
-                {{ form.submit_1(class="btn btn-secondary btn-pay form-roundness")}}
+                {{ form.travelcard_uses(class="form-control form-control-lg form-roundness",placeholder="Введите кол-во поездок",
+            maxlength="11",
+            oninput="this.value = this.value.replace(/[^0-9.]/g,
+            '').replace(/(\..*)\./g, '$1');") }}
+            </div>
+            <legend class="border-bottom mb-4"></legend>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-secondary btn-pay form-roundness")}}
             </div>
         </fieldset>
-        
-        <fieldset class="form-group" style="margin-bottom: 20px;">
-            <legend class="border-bottom mb-4">Проездной на {{ travelcard_uses[1] }} поездок</legend>
-            <div class="form-group">
-                {{ form.submit_2(class="btn btn-secondary btn-pay form-roundness")}}
-            </div>
-        </fieldset>
-
-        <fieldset class="form-group" style="margin-bottom: 20px;">
-            <legend class="border-bottom mb-4">Проездной на {{ travelcard_uses[2] }} поездок</legend>
-            <div class="form-group">
-                {{ form.submit_3(class="btn btn-secondary btn-pay form-roundness")}}
-            </div>
-        </fieldset>
-
-
     </form>
 </div>
 
