--- a/BusPay2000/templates/elements/layout.html
+++ b/BusPay2000/templates/elements/layout.html
@@ -35,7 +35,7 @@
     {% with messages = get_flashed_messages(with_categories=True) %}
     {% if messages%}
     {% for category, msg in messages %}
-        <div class="alert alert-{{ category }}g alert-dismissible fade show" role="alert">
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
             {{ msg }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
