--- a/BusPay2000/templates/elements/layout.html
+++ b/BusPay2000/templates/elements/layout.html
@@ -12,13 +12,12 @@
     <!-- my css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <!-- JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-
 
     {% if title %}
     <title>{{ title }}</title>
@@ -28,6 +27,7 @@
 </head>
 
 <body>
+        
     <!-- <div class="btn-x btn"> <span class="fas fa-bars"></span> </div> -->
     {% if not front %}
     {% include "elements/navbar.html" %}
@@ -45,11 +45,10 @@
     <div class="header">
         <div>
             <img class="logo-x-img" src="{{ url_for('static', filename='icons/logo.png') }}" alt="">
-            <p>АО "Инзенское Автортранспортное предприятие"</p>
+            <p>АО "Инзенское Автотранспортное предприятие"</p>
         </div>
     </div>
-    <div class="content">
-
+    <div class="content {{'content-schedule' if schedule_page }}">
             {% block content %}
             {% endblock content %}
     </div>
